--- a/home.html
+++ b/home.html
@@ -9,6 +9,13 @@
 </head>
 
 <body>
+	<script> 
+var name = prompt("Please enter your name", "");
+
+if (name == null || person == "") {
+} 
+</script>
+	
 <div class="nav">
 	<ul>
 		<li><a href="home.html">HOME</a></li>
@@ -22,7 +29,7 @@
 
 
 <div style="text-align: center;">
-	<h1>Hey!</h1>
+	<h1>Hey!  <script type="text/javascript"> document.write(" " + name)</h1>
 	<h3>This is <b>Raghav Garg</b>
 
 </div>
