--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@ if (name == null || person == "") {
 
 
 <div style="text-align: center;">
-	<h1>Hey!  <script type="text/javascript"> document.write(" " + name)</h1>
+	<h1>Hey!  <script type="text/javascript"> document.write(" " + name)</script></h1>
 	<h3>This is <b>Raghav Garg</b>
 
 </div>
