--- a/home.html
+++ b/home.html
@@ -9,13 +9,15 @@
 </head>
 
 <body>
-	<script> 
+
+<script> 
 var name = prompt("Please enter your name", "");
 
 if (name == null || person == "") {
 } 
 </script>
-	
+
+
 <div class="nav">
 	<ul>
 		<li><a href="home.html">HOME</a></li>
@@ -29,7 +31,7 @@ if (name == null || person == "") {
 
 
 <div style="text-align: center;">
-	<h1>Hey!  <script type="text/javascript"> document.write(" " + name)</script></h1>
+	<h1>Hey! <script type="text/javascript"> document.write(" " + name);</script></h1>
 	<h3>This is <b>Raghav Garg</b>
 
 </div>
