--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="css/css1.css">
 	<link rel="stylesheet" href="css/css2.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="height=device-height, initial-scale=1.0">
 	<title>Raghav Garg</title>
 
 </head>
