--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
 	<link rel="stylesheet" href="css/css1.css">
 	<link rel="stylesheet" href="css/cssabout.css">
+	<meta name="viewport" content="height=device-height, initial-scale=1.0">
 	<title>Raghav garg</title>
 
 
@@ -18,7 +19,7 @@
 		<li><a href="education.html">EDUCATION</a></li>
 	</ul> 
 </div>
-<br><br><br>
+<br><br><br><br><br><br>
 
 	<h2>A Little About Me!</h2>
 <div id="tbox"> 
