--- a/education.html
+++ b/education.html
@@ -4,6 +4,7 @@
 
 	<link rel="stylesheet" href="css/css1.css">
 	<link rel="stylesheet" href="css/cssedu.css">
+	<meta name="viewport" content="height=device-height, initial-scale=1.0">
 	<title>Raghav Garg</title>
 </head>
 <body>
@@ -16,7 +17,7 @@
 
 	</ul> 
 </div>
-<br><br><br>
+<br><br><br><br><br><br>
 
 <span>
   <img src="images/cgc.jpg"><br>
