--- a/interest.html
+++ b/interest.html
@@ -5,6 +5,7 @@
 
 	<link rel="stylesheet" href="css/css1.css">
 	<link rel="stylesheet" href="css/cssint.css">
+	<meta name="viewport" content="height=device-height, initial-scale=1.0">
 </head>
 <body>
 
@@ -18,7 +19,7 @@
 
 	</ul> 
 </div>
-<br><br><br>
+<br><br><br><br><br><br>
 <h2 style="margin-left: 20%;">Some of my major interests include penart, supernatural beliefs, coding.</h2>
 <br>
 <span>
